--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,177 +12,262 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-    }body {
-  display: flex;
-  min-height: 100vh;
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-  color: #fff;
-}
+    }
 
-.sidebar {
-  width: 220px;
-  background: rgba(0, 0, 0, 0.85);
-  padding: 20px 10px;
-  position: fixed;
-  height: 100vh;
-  overflow-y: auto;
-  top: 0;
-  left: 0;
-  z-index: 100;
-}
+    body {
+      display: flex;
+      min-height: 100vh;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #fff;
+    }
 
-.sidebar h2 {
-  font-family: 'Merriweather', serif;
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 30px;
-  color: #ffd700;
-}
+    .sidebar {
+      width: 220px;
+      background: rgba(0, 0, 0, 0.85);
+      padding: 20px 10px;
+      position: fixed;
+      height: 100vh;
+      overflow-y: auto;
+      top: 0;
+      left: 0;
+      z-index: 100;
+    }
 
-.sidebar a {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: #ccc;
-  text-decoration: none;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border-radius: 5px;
-  transition: 0.3s;
-}
+    .sidebar h2 {
+      font-family: 'Merriweather', serif;
+      font-size: 22px;
+      text-align: center;
+      margin-bottom: 30px;
+      color: #ffd700;
+    }
 
-.sidebar a:hover, .sidebar a.active {
-  background: #ffd700;
-  color: #000;
-  font-weight: bold;
-}
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: #ccc;
+      text-decoration: none;
+      padding: 12px 20px;
+      margin: 8px 0;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
 
-.main {
-  margin-left: 220px;
-  flex: 1;
-  padding: 20px;
-}
+    .sidebar a:hover, .sidebar a.active {
+      background: #ffd700;
+      color: #000;
+      font-weight: bold;
+    }
 
-.topbar {
-  background: rgba(255, 255, 255, 0.08);
-  padding: 15px 20px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  backdrop-filter: blur(8px);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    .main {
+      margin-left: 220px;
+      flex: 1;
+      padding: 20px;
+    }
 
-.topbar h1 {
-  font-size: 20px;
-  color: #ffd700;
-  font-weight: 600;
-}
+    .topbar {
+      background: rgba(255, 255, 255, 0.08);
+      padding: 15px 20px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      backdrop-filter: blur(8px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-.dashboard-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 25px;
-  border-bottom: 2px solid gold;
-  padding-bottom: 10px;
-}
+    .topbar h1 {
+      font-size: 20px;
+      color: #ffd700;
+      font-weight: 600;
+    }
 
-.dashboard-nav a {
-  background: #1c1c2e;
-  color: #ffd700;
-  padding: 10px 16px;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: 0.3s;
-}
+    .nav-links {
+      display: flex;
+      overflow-x: auto;
+      gap: 15px;
+      margin-top: 15px;
+      border-bottom: 2px solid gold;
+      padding-bottom: 10px;
+      white-space: nowrap;
+    }
 
-.dashboard-nav a:hover {
-  background: #ffd700;
-  color: #000;
-}
+    .nav-links a {
+      color: #ffd700;
+      font-weight: bold;
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background: rgba(255, 255, 255, 0.08);
+      transition: 0.3s;
+    }
 
-.card {
-  background: rgba(255, 255, 255, 0.05);
-  padding: 1.5rem;
-  border-radius: 1rem;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-}
+    .nav-links a:hover {
+      background: #ffd700;
+      color: #000;
+    }
 
-.card h3 {
-  color: #ffd700;
-  margin-bottom: 0.5rem;
-}
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
 
-.card p {
-  color: #ddd;
-}
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      backdrop-filter: blur(6px);
+    }
 
-footer {
-  margin-top: 40px;
-  text-align: center;
-  color: #bbb;
-  font-size: 14px;
-}
+    .card h3 {
+      color: #ffd700;
+      margin-bottom: 10px;
+    }
 
-@media (max-width: 768px) {
-  .sidebar {
-    display: none;
-  }
+    .card p {
+      font-size: 15px;
+      color: #eee;
+    }
 
-  .main {
-    margin-left: 0;
-    padding: 15px;
-  }
-}
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 14px;
+      color: #bbb;
+    }
 
+    #backToTop {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: #ffd700;
+      color: #000;
+      border: none;
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      font-size: 18px;
+      cursor: pointer;
+      display: none;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+
+    .notification {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background: #ffd700;
+      color: #000;
+      padding: 12px 20px;
+      border-radius: 10px;
+      font-weight: 600;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      animation: slideUp 1s ease-out, fadeOut 0.5s 6s ease-out forwards;
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
+    @media (max-width: 768px) {
+      .sidebar {
+        display: none;
+      }
+
+      .main {
+        margin-left: 0;
+        padding: 15px;
+      }
+
+      .topbar h1 {
+        font-size: 18px;
+      }
+
+      .nav-links {
+        flex-direction: row;
+        overflow-x: auto;
+        gap: 8px;
+        padding-bottom: 8px;
+      }
+    }
   </style>
 </head>
 <body>
+
+  <!-- Sidebar -->
   <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
     <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
     <a href="events.html"><i class="fas fa-calendar"></i> Events</a>
+    <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
     <a href="news.html"><i class="fas fa-bullhorn"></i> News</a>
     <a href="executives.html"><i class="fas fa-users"></i> Executives</a>
-    <a href="birthday.html"><i class="fas fa-gift"></i> Birthday Wall</a>
-    <a href="admin.html"><i class="fas fa-lock"></i> Admin</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  </div>  <div class="main">
-    <div class="topbar">
-      <h1>Welcome to the Dashboard</h1>
-    </div><div class="dashboard-nav">
-  <a href="downloads.html">Downloads</a>
-  <a href="events.html">Events</a>
-  <a href="news.html">News</a>
-  <a href="executives.html">Executives</a>
-  <a href="birthday.html">🎂 Birthday Wall</a>
-  <a href="contact.html">Contact</a>
-</div>
-
-<div class="card">
-  <h3>💡 Finance Fact</h3>
-  <p>Compound interest is considered the 8th wonder of the world — it allows your money to grow faster over time.</p>
-</div>
-
-<div class="card">
-  <h3>🎓 Academic Tip</h3>
-  <p>Review your lecture notes within 24 hours to retain up to 80% of what you learned.</p>
-</div>
-
-<div class="card">
-  <h3>📘 Study Hack</h3>
-  <p>Use the Pomodoro Technique: 25 minutes study, 5 minutes break. Increases focus and reduces burnout.</p>
-</div>
-
-<footer>
-  &copy; 2025 Finance Point • AAUA Finance Dept • Created by OBA
-</footer>
-
+    <a href="admin.html"><i class="fas fa-lock"></i> Admin</a>
   </div>
+
+  <!-- Main Content -->
+  <div class="main">
+    <div class="topbar">
+      <h1>🎓 Welcome to Finance Point Dashboard</h1>
+    </div>
+
+    <div class="nav-links">
+      <a href="dashboard.html">Dashboard</a>
+      <a href="downloads.html">Downloads</a>
+      <a href="events.html">Events</a>
+      <a href="birthday.html">Birthday Wall</a>
+      <a href="news.html">News</a>
+      <a href="executives.html">Executives</a>
+      <a href="contact.html">Contact</a>
+      <a href="admin.html">Admin</a>
+    </div>
+
+    <div class="cards">
+      <div class="card">
+        <h3>💡 Finance Fact</h3>
+        <p>Saving ₦100 daily gives you ₦36,500 a year. Start now, the earlier the better!</p>
+      </div>
+
+      <div class="card">
+        <h3>🎯 Academic Tip</h3>
+        <p>Review notes within 24 hours of the class. This helps lock it into your long-term memory.</p>
+      </div>
+
+      <div class="card">
+        <h3>📚 Study Advice</h3>
+        <p>Join or create a study group. Teaching others helps you remember more.</p>
+      </div>
+    </div>
+
+    <footer>
+      &copy; 2025 Finance Point • Created by OBA
+    </footer>
+  </div>
+
+  <!-- Back to Top Button -->
+  <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
+
+  <!-- Notification -->
+  <div class="notification">
+    🔔 New! Check out the Birthday Wall — Updated every day!
+  </div>
+
+  <script>
+    window.onscroll = function() {
+      document.getElementById('backToTop').style.display =
+        window.scrollY > 300 ? 'block' : 'none';
+    };
+  </script>
+
 </body>
 </html>
