--- a/lostandfound.html
+++ b/lostandfound.html
@@ -1,108 +1,163 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lost & Found | Finance Point</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
       margin: 0;
-      background: linear-gradient(to right, #2c3e50, #4ca1af);
       font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
-      padding: 20px;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-    }
-    h1 {
-      text-align: center;
-      color: #ffd700;
-      margin-bottom: 20px;
-    }
-    form label {
-      display: block;
-      margin: 10px 0 5px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      margin-bottom: 15px;
-    }
-    button {
-      background: #ffd700;
-      color: #000;
-      font-weight: bold;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .item {
-      background: rgba(255, 255, 255, 0.07);
-      padding: 15px;
-      border-radius: 6px;
-      margin-top: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    }
-    .item h3 {
-      color: #ffd700;
-      margin: 0 0 5px;
-    }
-    .item small {
-      color: #ccc;
-    }
+      padding: 2rem;
+    }h1 {
+  text-align: center;
+  color: #ffd700;
+  margin-bottom: 2rem;
+}
+
+.found-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px;
+  margin-bottom: 3rem;
+}
+
+.found-card {
+  background: rgba(255, 255, 255, 0.08);
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  backdrop-filter: blur(5px);
+}
+
+.found-card h3 {
+  color: #ffd700;
+  margin-bottom: 0.5rem;
+}
+
+.found-card p {
+  color: #ddd;
+  font-size: 14px;
+}
+
+form {
+  max-width: 600px;
+  margin: 0 auto;
+  background: rgba(255,255,255,0.05);
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+form h2 {
+  color: #ffd700;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+input, textarea, button {
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 0.75rem;
+  border: none;
+  border-radius: 0.5rem;
+}
+
+input, textarea {
+  background: #fff;
+  color: #000;
+}
+
+button {
+  background-color: #ffd700;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+footer {
+  text-align: center;
+  margin-top: 2rem;
+  color: #bbb;
+  font-size: 14px;
+}
+
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔍 Lost & Found</h1>
-    <form onsubmit="submitLostItem(event)">
-      <label for="itemName">Item Name</label>
-      <input type="text" id="itemName" placeholder="e.g., Black Wallet" required>
+  <h1>📦 Lost & Found Wall</h1>
+  <div class="found-grid" id="foundItems">
+    <p>Loading items...</p>
+  </div>  <form id="lostForm">
+    <h2>Submit Lost/Found Item</h2>
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="text" id="item" placeholder="Item Name (e.g. Blue Calculator)" required>
+    <textarea id="desc" placeholder="Item Description or where it was found/lost" required></textarea>
+    <button type="submit">Submit for Review</button>
+  </form>  <footer>
+    &copy; 2025 Finance Point • Created by OBA
+  </footer>  <script>
+    const APPROVED_API = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/a0a80090-14fe-4a0f-a6e2-7ab3e97bd42d";
+    const PENDING_API = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/b40a296b-90e2-49bb-ad28-5ca202f6543b";
 
-      <label for="itemDesc">Description</label>
-      <textarea id="itemDesc" rows="3" placeholder="e.g., Found near LT2 with some cards inside" required></textarea>
+    async function loadApprovedItems() {
+      try {
+        const res = await fetch(APPROVED_API);
+        const items = await res.json();
+        const container = document.getElementById("foundItems");
+        container.innerHTML = "";
 
-      <label for="itemLocation">Found At</label>
-      <input type="text" id="itemLocation" placeholder="e.g., Lecture Theatre 2" required>
+        if (!items.length) {
+          container.innerHTML = '<p>No items currently posted.</p>';
+          return;
+        }
 
-      <button type="submit">Post Item</button>
-    </form>
-
-    <div id="lostList"></div>
-  </div>
-
-  <script>
-    const lostList = document.getElementById("lostList");
-
-    function submitLostItem(event) {
-      event.preventDefault();
-
-      const name = document.getElementById("itemName").value.trim();
-      const desc = document.getElementById("itemDesc").value.trim();
-      const location = document.getElementById("itemLocation").value.trim();
-
-      const item = document.createElement("div");
-      item.className = "item";
-      item.innerHTML = `
-        <h3>${name}</h3>
-        <p>${desc}</p>
-        <small>📍 ${location}</small>
-      `;
-
-      lostList.prepend(item);
-      event.target.reset();
+        items.forEach(entry => {
+          const div = document.createElement("div");
+          div.className = "found-card";
+          div.innerHTML = `
+            <h3>${entry.item}</h3>
+            <p><strong>By:</strong> ${entry.name}</p>
+            <p>${entry.desc}</p>
+          `;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        document.getElementById("foundItems").innerHTML = '<p>Error loading items.</p>';
+        console.error(err);
+      }
     }
-  </script>
-</body>
+
+    document.getElementById("lostForm").addEventListener("submit", async e => {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const item = document.getElementById("item").value;
+      const desc = document.getElementById("desc").value;
+
+      const newEntry = { name, item, desc };
+
+      try {
+        const res = await fetch(PENDING_API);
+        const data = await res.json();
+        data.push(newEntry);
+
+        await fetch(PENDING_API, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        });
+
+        alert("Submitted successfully. Awaiting approval.");
+        document.getElementById("lostForm").reset();
+      } catch (err) {
+        alert("Failed to submit.");
+        console.error(err);
+      }
+    });
+
+    loadApprovedItems();
+  </script></body>
 </html>
